...
        ) {
            IconTextItem(
                modifier = Modifier,
                icon = vectorResource(Res.drawable.ic_filter_alt),
                iconColor = KarikaColors.Black1,
                iconSize = 16.dp,
                text = "Filteri",
                textColor = KarikaColors.Gray2,
                textSize = 16.sp,
                fontWeight = FontWeight.W400,
                iconPosition = FabPosition.End
            )
        }
...
                .weight(1f),
            padding = 4.dp,
            borderColor = KarikaColors.Gray2,
            value = sort,
            values = mutableStateOf(
                listOf(
                    "Najnoviji",
                    "Najstariji",
                    "Najjeftiniji",
                    "Najskuplji",
                    "Min. Količina",
                    "Po datumu",
                    "Sa popustom"
                )
            ).asState()
...
                                component.loadNextPage(true)
                            }
                            .padding(4.dp),
                        icon = vectorResource(Res.drawable.ic_tertiary),
                        iconColor = KarikaColors.Black1,
                        iconSize = 16.dp,
                        text = "Prikaži rasprodate",
                        textColor = KarikaColors.Gray2,
                        textSize = 16.sp,
                        fontWeight = FontWeight.W700,
                        iconPosition = FabPosition.End
                    )
                }
...
                horizontalArrangement = Arrangement.spacedBy(8.dp),
                verticalAlignment = Alignment.CenterVertically
            ) {
                KarikaText(
                    modifier = Modifier,
                    color = KarikaColors.Black,
                    text = "ISTAKNUTI ARTIKLI",
                    textSize = 16.sp,
                    fontWeight = FontWeight.W700
                )
                Box(
                    modifier = Modifier
                        .background(
                            color = KarikaColors.Primary.copy(alpha = 0.1f),
                            shape = RoundedCornerShape(12.dp)
                        )
                        .padding(horizontal = 8.dp, vertical = 4.dp)
                ) {
                    KarikaText(
                        text = "Sponzorisano",
                        color = KarikaColors.Gray2,
                        textSize = 10.sp,
                        fontWeight = FontWeight.W700
                    )
                }
            }
...
                            modifier = Modifier.size(12.dp),
                            imageVector = vectorResource(Res.drawable.star_outline),
                            contentDescription = null,
                            tint = KarikaColors.White,
                        )
                        KarikaText(
                            text = "ISTAKNUTO",
                            color = KarikaColors.White,
                            textSize = 10.sp,
                            fontWeight = FontWeight.W700
                        )
                    }
                }
...
        ) {
            KarikaText(
                modifier = Modifier,
                color = KarikaColors.Primary,
                textSize = 16.sp,
                fontWeight = FontWeight.W700,
                text = "Nema rezultata."
            )
        }
    }
}

