...
        ) {
            Column {
                KarikaText(
                    modifier = Modifier
                        .padding(horizontal = 16.dp)
                        .fillMaxWidth(),
                    text = "FILTERI",
                    color = KarikaUiColors.Ink,
                    textSize = 18.sp,
                    fontWeight = FontWeight.W700,
                    textAlign = TextAlign.Center
                )
                YSpacer16()
...
                                checkedColor = KarikaUiColors.Pink,
                                uncheckedColor = KarikaUiColors.Border
                            ),
                            enabled = true
                        )
                        KarikaText(
                            text = "Svi regioni",
                            color = KarikaUiColors.Ink,
                            textSize = 15.sp,
                            fontWeight = FontWeight.W500,
                        )
                    }
                    config.customerRegionList.forEach {
...
                        .fillMaxWidth(),
                    horizontalArrangement = Arrangement.spacedBy(16.dp)
                ) {
                    KSecondaryButton(
                        modifier = Modifier
                            .weight(1f),
                        text = "Zatvori"
                    ) {
                        showState.negate()
                    }
                    KPrimaryButton(
                        modifier = Modifier
                            .weight(1f),
                        text = "Primijeni"
                    ) {
                        showState.negate()
                        component.loadNextPage(reset = true)
                    }
                }
                LaunchedEffect(Unit) {
...
